@@ -1,6 +1,7 @@
 0.6.4.21
 Added parameter -includeLabels to Get-NavContainers
 Issue #769 filenames of tranlationfiles needs to be unescaped
+All docker versions prior to 18.03.0 will stop working end of 2019 (due to TLS v1.2) - added warning if user needs to update docker
 
 0.6.4.20
 Better error handling in Run-Tests and Get-Tests
